# aios

./: .gitignore  AGENT_FIRST_COMPONENTS.md  ARCHITECTURE.md  BOOT_SEQUENCE.md  CHANGELOG.md  CLA.md  CLA_SIGNATURES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  NOTICE  QUICK_START.md  README.md  REPO_LAYOUT.md  SECURITY.md  SUBSYSTEM_INVENTORY.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  push-to-github.sh  tsconfig.json  turbo.json
.changeset/: README.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changeset.yml  ci-integration.yml  cla-check.yml  pre-push-checks.yml
.turbo/cache/: 0079d90d3d43f357-meta.json  00ce63f456b3aeb6-meta.json  00ce63f456b3aeb6.tar.zst  0128b4942041d2df-meta.json  0128b4942041d2df.tar.zst  0243a766cc42fafc-meta.json  0259bcad73554a31-meta.json  0479590ac6c71a5c-meta.json  05779be748dbe505-meta.json  0782c5c614a8c211-meta.json  0782c5c614a8c211.tar.zst  08195fda216ea4e1-meta.json  09ea13ab0258f205-meta.json  09ea13ab0258f205.tar.zst  0aed7488f57532df-meta.json  0b30099cbc29d8e7-meta.json  0ca8bb90b62f21dc-meta.json  0ca8bb90b62f21dc.tar.zst  0d9905de7ad94f6e-meta.json  0e93ded2b8aeb21f-meta.json  0e93ded2b8aeb21f.tar.zst  1062dfefad42c488-meta.json  1062dfefad42c488.tar.zst  131fbded72bad86d-meta.json  131fbded72bad86d.tar.zst  139c1b026bd6de41-meta.json  144c151b7635de2e-meta.json  1535d49cfb8d0754-meta.json  15a7c41e84186225-meta.json  15a7c41e84186225.tar.zst  15eac307f4b4cd0d-meta.json  16173f7f639bc589-meta.json  16173f7f639bc589.tar.zst  161f33bab93e71c4-meta.json  161f33bab93e71c4.tar.zst  18d7f8dc5a1ece31-meta.json  18d7f8dc5a1ece31.tar.zst  1ba531e7f3f30673-meta.json  1c12f2a550ef7c07-meta.json  1c12f2a550ef7c07.tar.zst  (+333 more)
apps/runtime/: package.json  tsconfig.json
boot/bootloader/: Cargo.toml  README.md
ci/: requirements-models.txt
ci/models/: validate_models.py
ci/release_gates/: check_gates.py
docs/: BUSINESS_STRATEGY.md  FOUNDATIONAL_SUBSYSTEMS.md  OPEN_CORE_SPLIT.md  PRIVATE_DOCS.md  README.md  SINGAPORE_STRATEGY.md  SYSCALL_API.md
docs/api/: KERNEL_API.md  SERVICES_API.md
docs/architecture/: AIOS_OS_DESIGN.md  AIOS_TECHNICAL_WHITEPAPER.md  ARCHITECTURE.md  ARCHITECTURE_FAQ.md  BOOT_SEQUENCE.md  REPO_LAYOUT.md  SYSCALL_API.md
docs/business/: .gitkeep  AIOS_WHITEPAPER.md  BUSINESS_STRATEGY.md  OPEN_CORE_SPLIT.md  README.md  SINGAPORE_STRATEGY.md
docs/components/: AGENT_FIRST_COMPONENTS.md  COMPLETE_SYSTEM_INVENTORY.md  MISSING_COMPONENTS.md
docs/development/: AGENT_EVOLUTION_ARCHITECTURE.md  AGENT_MANAGEMENT_HIERARCHY.md  AI_CAPABILITIES_ANALYSIS.md  E2E_WORKFLOW_TESTING.md  FEATURES_IMPLEMENTATION.md  GUI_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTS_COMPLETE.md  KERNEL_ML_INTEGRATION.md  ML_INFERENCE_OPTIMIZATION.md  README.md  (+10 more)
kernel/: Cargo.toml  README.md  build.sh  x86_64-aios.json
kernel/.cargo/: config.toml
kernel/crates/kernel-agent/: Cargo.toml
kernel/crates/kernel-agent/src/: agent.rs  ai_scheduler.rs  lib.rs  lifecycle.rs  scheduler.rs
kernel/crates/kernel-audit/: Cargo.toml
kernel/crates/kernel-audit/src/: attestation.rs  audit.rs  lib.rs  log.rs
kernel/crates/kernel-capability/: Cargo.toml
kernel/crates/kernel-capability/src/: capability.rs  lib.rs  quota.rs  resource_group.rs  revocation.rs
kernel/crates/kernel-core/: Cargo.toml
kernel/crates/kernel-core/src/: ai_healing.rs  boot.rs  boot_info.rs  error.rs  error.rs.bak  error_recovery.rs  exceptions.rs  exceptions.rs.bak  interrupts.rs  lib.rs  log.rs  ml_client.rs  serialize.rs  smp.rs  sync.rs  syscall.rs  syscall.rs.bak  time.rs  time.rs.bak
kernel/crates/kernel-core/src/memory/: agent_mapping.rs  agent_pool.rs  ai_adaptive.rs  allocator.rs  fabric.rs  fabric.rs.bak  mod.rs  physical.rs  virtual_mem.rs
kernel/crates/kernel-crypto/: Cargo.toml
kernel/crates/kernel-crypto/src/: dilithium.rs  hash.rs  key_exchange.rs  kyber.rs  lib.rs  signature.rs
kernel/crates/kernel-drivers/: Cargo.toml
kernel/crates/kernel-drivers/src/: acpi_tree.rs  bus.rs  device.rs  driver.rs  enclave.rs  ethernet.rs  hotplug.rs  lib.rs  nvme.rs  sata.rs  sgx.rs  tpm.rs
kernel/crates/kernel-events/: Cargo.toml
kernel/crates/kernel-events/src/: bus.rs  event.rs  lib.rs  subscription.rs
kernel/crates/kernel-fs/: Cargo.toml
kernel/crates/kernel-fs/src/: directory.rs  file.rs  inode.rs  journal.rs  lib.rs  snapshot.rs  superblock.rs
kernel/crates/kernel-hal/: Cargo.toml
kernel/crates/kernel-hal/src/: acpi.rs  apic.rs  edid.rs  gpu.rs  graphics.rs  input.rs  iommu.rs  lib.rs  network.rs  pcie.rs  storage.rs  timer.rs
kernel/crates/kernel-io/: Cargo.toml
kernel/crates/kernel-io/src/: async_io.rs  block.rs  char.rs  lib.rs  quota.rs  scheduler.rs
kernel/crates/kernel-ipc/: Cargo.toml
kernel/crates/kernel-ipc/src/: bus.rs  lib.rs  message.rs  routing.rs
kernel/crates/kernel-net/: Cargo.toml
kernel/crates/kernel-net/src/: firewall.rs  ip.rs  lib.rs  namespace.rs  routing.rs  socket.rs  tcp.rs  udp.rs
kernel/crates/kernel-observability/: Cargo.toml
kernel/crates/kernel-observability/src/: counters.rs  lib.rs  metrics.rs  tracing.rs
kernel/crates/kernel-policy/: Cargo.toml
kernel/crates/kernel-policy/src/: enforcement.rs  evaluator.rs  lib.rs  policy.rs
kernel/src/: main.rs
scripts/: build_all.sh  build_chaos.sh  build_perf.sh  collect_artifacts.sh  implement-placeholders.sh  pre-push-check.sh  run_chaos.sh  run_integration.sh  run_performance.sh  update-dependencies.sh
sdk/: README.md
tests/integration/: Cargo.toml
tests/integration/src/: chaos.rs  e2e_workflows.rs  harness.rs  integration.rs  main.rs  performance.rs
tests/kernel/: Cargo.toml  README.md  lib.rs
tests/kernel/benchmarks/: bench_ipc.rs  bench_memory.rs  bench_scheduler.rs  mod.rs
tests/kernel/integration/: mod.rs  test_boot.rs  test_subsystem_integration.rs
tests/kernel/unit/: mod.rs  test_framework.rs  test_memory.rs  test_policy.rs  test_scheduler.rs
(+171 files in other folders)
