[package]
name = "aios-test-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aios-test-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
sha2 = "0.10"

[dev-dependencies]

