[package]
name = "aios-kernel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aios-kernel-core = { path = "../kernel-core" }
aios-kernel-capability = { path = "../kernel-capability" }
aios-kernel-events = { path = "../kernel-events" }
spin = "0.10"
bitflags = "2.5"

[features]
default = []
alloc = []

