[package]
name = "aios-kernel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
bitflags = "2.5"
x86_64 = { version = "0.14", features = ["instructions"] }
volatile = "0.4"
multiboot2 = "0.11"

[target.'cfg(target_os = "none")'.dependencies]
bootloader = { version = "0.12", features = ["map_physical_memory"] }

[features]
default = []
alloc = []

