[package]
name = "aios-kernel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aios-kernel-events = { path = "../kernel-events" }
aios-kernel-ipc = { path = "../kernel-ipc" }
spin = "0.9"
bitflags = "2.5"
x86_64 = { version = "0.15", features = ["instructions"] }
volatile = "0.4"
multiboot2 = "0.24"

# Bootloader removed - we have our own minimal bootloader in boot/bootloader/

[features]
default = []
alloc = []

