[package]
name = "aios-kernel-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
aios-kernel-core = { path = "../kernel-core" }
aios-kernel-capability = { path = "../kernel-capability" }
aios-kernel-events = { path = "../kernel-events" }
aios-kernel-policy = { path = "../kernel-policy" }
spin = "0.9"
bitflags = "2.5"
x86_64 = { version = "0.15", features = ["instructions"] }

[features]
default = []
alloc = []

