[package]
name = "aios-kernel-io"
version = "0.1.0"
edition = "2021"

[dependencies]
aios-kernel-core = { path = "../kernel-core" }
aios-kernel-capability = { path = "../kernel-capability" }
aios-kernel-drivers = { path = "../kernel-drivers" }
aios-kernel-observability = { path = "../kernel-observability" }
aios-kernel-policy = { path = "../kernel-policy" }
spin = "0.9"
bitflags = "2.5"

[features]
default = []
alloc = []

